--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,25 @@
   margin: auto;
   background-color: #e8f4f8;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 14pt;
   text-align: center;
-  color: #172B4D;
+  color: #172b4d;
 }
 
-.spacer-bottom {
-  padding-bottom:30px;
+input {
+  font-size: 14pt;
+}
+
+label {
+  font-weight: bold;   
+}
+
+.pad-bottom {
+  padding-bottom: 30px;
+}
+
+.hide {
+  display: none;
 }
 
 .title label {
@@ -18,33 +31,25 @@
 .title img {
   margin-right: -5px;
   width: 50px;
-  vertical-align: baseline;
 }
 
 .domain {
   max-width: 50%;
   margin: auto;
-  display: none;
 }
 
 .domain input {
-  max-width:200px;
+  max-width: 200px;
 }
 
 .domain label {
-   font-weight: bold;
-   font-size: 18pt;
-}
-
-.domain input {
-  font-size: 14pt;
+  font-size: 18pt;
 }
 
 .url {
-   font-size: 14pt;
-   display: inline-block;
-   padding-top: 20px;
-   margin-left: 40px;
+  display: inline-block;
+  padding-top: 20px;
+  margin-left: 40px;
 }
 
 .search-view {
@@ -54,58 +59,48 @@
 
 .search-view input {
   width: 75%;
-  font-size: 14pt;
 }
 
 .link {
   width: 50%;
-  font-size: 14pt;
-  display: none;
 }
 
 .link input {
   width: 100%;
-  font-size: 14pt;
-}
-
-.sarcasticLabel {
-    display: none;
-    font-weight: bold;
 }
 
 svg {
-    display:none;
-    position:absolute;
+  position: absolute;
 }
 
 button {
-  box-shadow:inset 0px 1px 0px 0px #ffffff;
-  background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
-  background-color:#f9f9f9;
-  border-radius:6px;
-  border:1px solid #dcdcdc;
-  display:none;
-  cursor:pointer;
-  color:#666666;
-  font-family:Arial;
-  font-size:15px;
-  font-weight:bold;
-  padding:6px 24px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #ffffff;
+  box-shadow: inset 0px 1px 0px 0px #ffffff;
+  background: linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+  background-color: #f9f9f9;
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+  display: none;
+  cursor: pointer;
+  color: #666666;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ffffff;
 }
+
 button:hover {
   background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
   background-color:#e9e9e9;
 }
 
+/* Duplicate of button:hover, to allow simulating a hover with the mouse animation */
 .button-hover {
-  background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
-  background-color:#e9e9e9;
+  background: linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+  background-color: #e9e9e9;
 }
 
 button:active {
-  position:relative;
-  top:1px;
+  position: relative;
+  top: 1px;
 }
-
