--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@
 
 input {
   font-size: 14pt;
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+}
+
+input:focus {
+  outline: none;
+  border: 1px solid #000000;
 }
 
 label {
@@ -34,26 +41,28 @@ label {
 }
 
 .domain {
-  max-width: 50%;
+  max-width: 750px;
   margin: auto;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.domain label {
+  font-size: 18pt;
+  padding: 10px;
 }
 
 .domain input {
   max-width: 200px;
 }
 
-.domain label {
-  font-size: 18pt;
-}
-
 .url {
   display: inline-block;
-  padding-top: 20px;
-  margin-left: 40px;
+  padding: 10px;
 }
 
 .search-view {
-  max-width: 50%;
+  max-width: 750px;
   margin: auto;
 }
 
@@ -100,7 +109,9 @@ button:hover {
   background-color: #e9e9e9;
 }
 
-button:active {
+button:focus {
   position: relative;
   top: 1px;
+  outline: none;
+  border: 1px solid #000000;
 }
